--- a/lib_net/build.gradle
+++ b/lib_net/build.gradle
@@ -1,31 +1,33 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion build_version.compile_sdk
-    buildToolsVersion build_version.build_tool
+
+
+
+
     defaultConfig {
-        applicationId "com.example.mmc.androidcomponent"
         minSdkVersion build_version.min_sdk
         targetSdkVersion build_version.target_sdk
-        versionCode build_version.version_code
-        versionName build_version.version_name
+        versionCode 1
+        versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation project(':lib_common')
     implementation deps.support.support_v7
-
-    implementation deps.constraint
-
-    implementation deps.glide
-    annotationProcessor deps.glide_compiler
-
+    implementation deps.okhttp
 }
