--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,16 @@ android {
         }
     }
 }
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '26.1.0'
+            }
+        }
+    }
+}
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -32,4 +42,5 @@ dependencies {
     implementation project(':lib_net')
 
     implementation  deps.okhttp
+    implementation deps.gson
 }
